[gd_scene load_steps=19 format=3 uid="uid://b4g2hpqy1mof4"]

[ext_resource type="Script" path="res://tscn/main.gd" id="1_j5nsf"]
[ext_resource type="PackedScene" uid="uid://b4oypce8sv10c" path="res://tscn/blue_ball.tscn" id="1_nkna7"]
[ext_resource type="PackedScene" uid="uid://b1gjg1jedclpj" path="res://tscn/red_ball.tscn" id="3_ojhxv"]
[ext_resource type="PackedScene" uid="uid://c40ec7g7sxyjo" path="res://tscn/red_box.tscn" id="4_ev150"]
[ext_resource type="Script" path="res://gd/score.gd" id="4_wxwyp"]
[ext_resource type="Script" path="res://gd/Boxes.gd" id="5_hsrj2"]
[ext_resource type="PackedScene" uid="uid://brd6trgfsa4v8" path="res://tscn/blue_box.tscn" id="5_ji488"]
[ext_resource type="Script" path="res://gd/ColorRect.gd" id="6_um1cj"]
[ext_resource type="Script" path="res://gd/blueLabel.gd" id="6_xdd06"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_r8mse"]

[sub_resource type="Sky" id="Sky_vkmxq"]
sky_material = SubResource("ProceduralSkyMaterial_r8mse")

[sub_resource type="Environment" id="Environment_rt63a"]
background_mode = 2
sky = SubResource("Sky_vkmxq")

[sub_resource type="BoxShape3D" id="BoxShape3D_a5ge2"]
size = Vector3(100, 10, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qme5e"]
size = Vector3(100, 10, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_nb058"]
size = Vector3(1, 10, 101)

[sub_resource type="BoxMesh" id="BoxMesh_ijkyt"]
size = Vector3(1, 10, 101)

[sub_resource type="BoxShape3D" id="BoxShape3D_8irq2"]
size = Vector3(100, 1, 101)

[sub_resource type="BoxMesh" id="BoxMesh_uslwe"]
size = Vector3(100, 1, 101)

[node name="Main" type="Node3D"]
process_mode = 3
script = ExtResource("1_j5nsf")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 77.3753, -0.125239)
current = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15.7205, 0)
layers = 0
light_cull_mask = 4294443007
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rt63a")

[node name="BottomWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 51.088)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="BottomWall"]
shape = SubResource("BoxShape3D_a5ge2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BottomWall/CollisionShape3D"]
mesh = SubResource("BoxMesh_qme5e")
skeleton = NodePath("../..")

[node name="TopWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50.9407)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="TopWall"]
shape = SubResource("BoxShape3D_a5ge2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TopWall/CollisionShape3D"]
mesh = SubResource("BoxMesh_qme5e")
skeleton = NodePath("../..")

[node name="RightWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.532, 0, 0)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWall"]
shape = SubResource("BoxShape3D_nb058")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightWall/CollisionShape3D"]
mesh = SubResource("BoxMesh_ijkyt")

[node name="LeftWall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -49.514, 0, 0)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall"]
shape = SubResource("BoxShape3D_nb058")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftWall/CollisionShape3D"]
mesh = SubResource("BoxMesh_ijkyt")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_8irq2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor/CollisionShape3D"]
mesh = SubResource("BoxMesh_uslwe")

[node name="BlueBall" parent="." instance=ExtResource("1_nkna7")]

[node name="RedBall" parent="." instance=ExtResource("3_ojhxv")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_wxwyp")

[node name="BlueLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 140.0
offset_top = 240.0
offset_right = 181.0
offset_bottom = 263.0
text = "BLUE"

[node name="BlueScore" type="Label" parent="Control/BlueLabel"]
layout_mode = 0
offset_top = 32.0
offset_right = 40.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
script = ExtResource("6_xdd06")

[node name="ColorRect" type="ColorRect" parent="Control/BlueLabel"]
layout_mode = 0
offset_left = -1.0
offset_top = -46.0
offset_right = 39.0
offset_bottom = -6.0
color = Color(0, 0.215686, 1, 1)

[node name="RedLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1430.0
offset_top = 240.0
offset_right = 1470.0
offset_bottom = 263.0
text = "RED"

[node name="RedScore" type="Label" parent="Control/RedLabel"]
layout_mode = 0
offset_left = -2.0
offset_top = 31.0
offset_right = 38.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Control/RedLabel"]
layout_mode = 0
offset_left = -5.0
offset_top = -43.0
offset_right = 35.0
offset_bottom = -3.0
color = Color(1, 0, 0, 1)

[node name="YouWin" type="Label" parent="Control"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -29.0
offset_right = 55.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -79.5
offset_right = 159.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_um1cj")

[node name="PlayAgainButton" type="Button" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 117.5
offset_top = 107.5
offset_right = 205.5
offset_bottom = 138.5
text = "Play Again"

[node name="Boxes" type="Node3D" parent="."]
script = ExtResource("5_hsrj2")

[node name="RedBox" parent="Boxes" instance=ExtResource("4_ev150")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.301, -3)

[node name="RedBox2" parent="Boxes" instance=ExtResource("4_ev150")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1.30081, -3)

[node name="RedBox3" parent="Boxes" instance=ExtResource("4_ev150")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1.30081, -3)

[node name="RedBox4" parent="Boxes" instance=ExtResource("4_ev150")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 1.30081, -3)

[node name="RedBox5" parent="Boxes" instance=ExtResource("4_ev150")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 1.30081, -3)

[node name="RedBox6" parent="Boxes" instance=ExtResource("4_ev150")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 1.30081, -3)

[node name="RedBox7" parent="Boxes" instance=ExtResource("4_ev150")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 1.30081, -3)

[node name="RedBox8" parent="Boxes" instance=ExtResource("4_ev150")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 1.30081, -3)

[node name="BlueBox" parent="Boxes" instance=ExtResource("5_ji488")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.08, 1.301, 3)

[node name="BlueBox2" parent="Boxes" instance=ExtResource("5_ji488")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.08, 1.301, 3)

[node name="BlueBox3" parent="Boxes" instance=ExtResource("5_ji488")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.08, 1.301, 3)

[node name="BlueBox4" parent="Boxes" instance=ExtResource("5_ji488")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.08, 1.301, 3)

[node name="BlueBox5" parent="Boxes" instance=ExtResource("5_ji488")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.08, 1.301, 3)

[node name="BlueBox6" parent="Boxes" instance=ExtResource("5_ji488")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.08, 1.301, 3)

[node name="BlueBox7" parent="Boxes" instance=ExtResource("5_ji488")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.08, 1.301, 3)

[node name="BlueBox8" parent="Boxes" instance=ExtResource("5_ji488")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35.08, 1.301, 3)

[node name="Button" type="Button" parent="."]
offset_left = 109.0
offset_top = 348.0
offset_right = 220.0
offset_bottom = 379.0
text = "Add Blue Ball"

[node name="Button2" type="Button" parent="."]
offset_left = 1403.0
offset_top = 352.0
offset_right = 1509.0
offset_bottom = 383.0
text = "Add Red Ball"

[node name="Control2" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -52.0
offset_right = 85.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Pause" type="Label" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -21.0
offset_right = 58.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "PAUSED"

[node name="HSlider" type="HSlider" parent="."]
offset_right = 159.0
offset_bottom = 16.0

[connection signal="sDeleteBall" from="Control" to="." method="_on_control_s_delete_ball"]
[connection signal="sPauseGame" from="Control" to="." method="_on_control_s_pause_game"]
[connection signal="pressed" from="Control/ColorRect/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
